hamt_go/CHANGES

v0.1.1
    2014-04-07
        * first level ndx inserts pass test                         * SLOC  549
    2014-04-08
        * test verifies first level values correct                  * SLOC  571
    2014-04-12
        * tested, working Table32.{insert,find,delete}Entry()       * SLOC  730

v0.1.0
    2014-04-04
        * code extracted from ctries_go testing basic insert algo   * SLOC  104
        * added SWAR-based BitCount32/64() as util.go               * SLOC  148
        * added Bytes*Key, EntryI, HAMT, Key*I, Leaf* and tests     * SLOC  386